--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.editorconfig*
+.postcssrc.js*
+.eslintignore*
 
 # Editor directories and files
 .idea
