--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "lib-flexible": "^0.3.2",
+    "px2rem-loader": "^0.1.9",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0",
-    "axios": "^0.16.2",
     "vux": "^2.4.0",
     "vux-loader": "^1.0.68"
   },
